# netana

./: .gitignore  .gitingore  .py  MANIFEST.in  PKG-INFO  README  README.md  config.toml  copyright  netana-3.1.18-md5sums  netana-3.1.18-py3-none-any.whl  netana-3.1.2-md5sums  netana-3.1.2-py3-none-any.whl  netana-3.1.2-py3-none-any.whl.asc  netana-3.2.0-md5sums  netana-3.3.2-md5sums  netana-3.3.3-md5sums  netana-3.3.4-md5sums  netana.desktop  pyproject.toml  setup.py  snapcraft.yaml
netana/: main.py  matutil.py  matutil.py.bak  plotutil.py
netana/doc/: about.html
netana/examples/: BainterFilter.report  LadderMash9.report  LadderNode10.equ  Wein_Bridge.equ
src/: __main__.py  disreport.py  getnet.py  griddialog.py  mknetf.py  mkreport.py  netana.py  plotutil.py  start-netana.py  test.net
src/doc/: NetAnaDoc.html  about.html
src/examples/: Active5PButterworthFilter.net  ActiveBandPassFilter.net  BainterFilter.equ  BainterFilter.net  BalencedTeeNetwork.equ  LadderMash9.equ  LadderMash9.net  LadderNode10.equ  LadderNode10.report  Wein_Bridge.net  Wein_Bridge.report
src/netana-examples/: Active5PButterworthFilter.equ  Active5PButterworthFilter.net  Active5PButterworthFilter.report  ActiveBandPassFilter.equ  ActiveBandPassFilter.net  ActiveBandPassFilter.report  BainterFilter.report  Bal_RC_Bridge.net  Bal_RC_Bridge.report  BalencedTeeNetwork.equ  BalencedTeeNetwork.net  LadderMash9.equ  LadderMash9.report  LadderNode10.net  LadderNode10.report  Wein_Bridge.net  Wein_Bridge.report
src/netana/doc/: NetAnaDoc.html
src/netana/examples/: Active5PButterworthFilter.equ  ActiveBandPassFilter.report  Bal_RC_Bridge.equ  BalencedTeeNetwork.report  Wein_Bridge.report
