[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "netana"
version = "3.3.4"
dependencies = [
	"tkinter-gl",
	"matplotlib",
	"Pillow",
	"numpy",
]
requires-python = ">= 3.8"
authors = [
	{name = "James R. Bainter", email = "bainter8326@gmail.com"},
]
description = "Electronic Network Analyzer"
readme = "README.md"
#license = "MIT AND (Apache-2.0 OR BSD-2-Clause)"
license = "GPL-3.0-or-later"
keywords = ["electronic network", "circuit", "node", "mash", "analysis"]
classifiers = [
	"Development Status :: 5 Production Stable",
	"Intended Audience :: Hardware Engineers and EE students",
	"Programing Language :: Python 3",
]

[project.urls]
repository = "https://githob.com/jrbainter/netana.git"

[project.gui-scripts]
netana = "netana:NetAna.main"
